[package]
name = "spyparty"
version = "0.1.3"
authors = ["Adam Ransom"]
edition = "2018"
license= "MIT"
description = "A library for parsing SpyParty replays."
homepage = "https://github.com/adamransom/spyparty-rs"
repository = "https://github.com/adamransom/spyparty-rs"
readme="README.md"

[dependencies]
regex = "1"
